<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:hint="@string/enter_your_name"
            android:background="@drawable/edittext_bottom_line"
            android:paddingLeft="10dp"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:inputType="textCapCharacters"/>


        <EditText
            android:id="@+id/edt_telephone"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:hint="@string/enter_your_telephone_number"
            android:background="@drawable/edittext_bottom_line"
            android:paddingLeft="10dp"
            android:textColor="@color/colorText"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:maxLength="10"/>
        
        
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checkedButton="@id/rb_male"
            android:orientation="horizontal">
            
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/male"
                android:background="@drawable/radiobutton_background"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="#CCCCCC"/>

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/female"
                android:background="@drawable/radiobutton_background"
                android:button="@android:color/transparent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="#CCCCCC"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_brackground"
            android:text="@string/submit"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/recyclerview_background">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="NAME"
                android:paddingLeft="7dp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="TEL"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="SEX"
                android:gravity="center"
                android:textColor="@android:color/black" />

        </LinearLayout>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            />


        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
